fixes bug 195746 "Corrupt cache / HTTP networking - Wrong images, incomplete pages, octet-stream download dialog" r=dougt sr=bz